fix(module:tree-select): enable overflow-x for virtual scroll (#9045)

--- a/components/tree-select/style/patch.less
+++ b/components/tree-select/style/patch.less
@@ -16,4 +16,8 @@
   margin-top: 4px;
   margin-bottom: 4px;
   overflow: auto;
+
+  .cdk-virtual-scroll-content-wrapper {
+    overflow: auto;
+  }
 }
